<resources>
    <string name="app_name">BabyNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_eating">Eating</string>
    <string name="EatLeftTitle">Left</string>
    <string name="EatRightTitle">Right</string>
    <string name="EatBottle">Bottle</string>
    <string name="PampersSmallDeal">Small</string>
    <string name="LargeDeal">Large</string>
    <string name="PampersSmallLarge"><![CDATA[Small&Large]]></string>

    <string-array name="eating_sources">
        <item>Milk Left</item>
        <item>Milk Right</item>
        <item>Bottle</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EatingActivityTitle">Eating</string>
    <string name="eating_help_message">Press start on begin and Stop to save.</string>
    <string name="eating_default_value">100</string>
    <string name="eating_bottle_amount_header">Enter size</string>
    <string name="eating_bottle_amount_units">ml</string>

    <string name="eating_milk_header_message">Your baby is eating %1$s now</string>
    <string name="eating_bottle_with_amount_header_message">Your baby is eating %1$d from bottle</string>
    <string name="eating_bottle_header_message">Your baby is eating from bottle now</string>
    <string name="left_menu_eating_title">Eat</string>
    <string name="left_menu_pampers_title">Pampers</string>
    <string name="eating_list_help_message">All eatings by %1$s,\n press red button below to change date</string>
    <string name="baby_sex_radiobutton_dialog_title">Sex:</string>
    <string name="baby_sex_radiobutton_dialog_female_title">Female</string>
    <string name="baby_sex_radiobutton_dialog_male_title">Male</string>
    <string name="baby_birthday_dialog_title">Birthday</string>
    <string name="baby_name_dialog_title">Baby name:</string>

    <string name="dateTimeBegin">Begin time</string>
    <string name="dateTimeEnd">End time</string>
    <string name="dateTime">Time</string>
    <string name="type">Description</string>
    <string name="amount">Amount</string>
    <string name="pampersSmallButtonTitle">Small</string>
    <string name="pampersLargeButtonTitle">Large</string>
    <string name="pampersSmallLargeButtonTitle"><![CDATA[Small&Large]]></string>
    <string name="PampersActivityTitle">Pampers</string>
    <string name="pampers_small_recycler_description">по-маленькому</string>
    <string name="pampers_large_recycler_description">по большому</string>
    <string name="pampers_small_and_large_recycler_description">уделали весь памеперс</string>
    <string name="sleep_left_side_recycler_description">на левом боку</string>
    <string name="sleep_right_side_recycler_description">на правом боку</string>
    <string name="left_menu_sleep_title">Sleeps</string>
    <string name="sleep_header_title">Нажмите Старт, когда ребенок уложен спать и Стоп, когда проснулся</string>
    <string name="sleep_deep_sleep_recycler_description">Обычный глубокий сон</string>
    <string name="left_menu_main_title">Main</string>
    <string name="left_menu_stats_title">Statistics</string>
    <string name="left_menu_walk_title">Walks</string>
    <string name="left_menu_play_title">Plays</string>
    <string name="left_menu_swim_title">Swim</string>
    <string name="left_menu_drugs_title">Drugs</string>
    <string name="walk_header_title">Walking</string>
    <string name="play_header_title">Playing</string>
    <string name="swim_header_title">Swiming</string>
    <string name="walk_on_balcony_recycler_description">на балконе</string>
    <string name="walk_on_street_recycler_description">по улице</string>
    <string name="play_inAbdominal_recycler_description">лежим на животе</string>
    <string name="play_inArena_recycler_description">бегаем в загоне</string>
    <string name="play_inBad_recycler_description">играем в кроватке</string>
    <string name="swim_with_soap_recycler_description">с мылом</string>
    <string name="swim_with_salt_recycler_description">с солью</string>

    <string name="walk_on_balcony_statistics_description">гуляли на балконе %d минут</string>
    <string name="walk_on_street_statistics_description">ходили на %d минут по улице</string>


</resources>
