<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:text="@string/eating_bottle_amount_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/bottleAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eating_default_value"
        android:textSize="25sp"
        android:numeric="integer"
        android:text="100" />

    <TextView
        android:text="@string/eating_bottle_amount_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

</LinearLayout>