<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EatLeftTitle"
            android:id="@+id/eatLeftButton"
            android:layout_toStartOf="@+id/eatBottle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EatRightTitle"
            android:id="@+id/eatRightButton"
            android:layout_toEndOf="@+id/pampersSmallLarge" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EatBottle"
            android:id="@+id/eatBottle"
            android:layout_toEndOf="@+id/eatRightButton" />

</LinearLayout>