<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.squel.babynote.BaseActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            />

        <FrameLayout
            android:id="@+id/activity_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nav_view_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/left_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/nav_header_main" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_main_page"
                    android:text="@string/left_menu_main_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_eating"
                    android:text="@string/left_menu_eating_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_pampers"
                    android:text="@string/left_menu_pampers_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_sleep"
                    android:text="@string/left_menu_sleep_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_walk"
                    android:text="@string/left_menu_walk_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_play"
                    android:text="@string/left_menu_play_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_swim"
                    android:text="@string/left_menu_swim_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_drugs"
                    android:text="@string/left_menu_drugs_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_menu_stats"
                    android:text="@string/left_menu_stats_title"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
